@@ -22,6 +22,7 @@ Marc-Olivier Barre
 		
 	* Define an internal jack_client_open_aux needed for library wrapper feature.
 	* Improve wrapper code.
+	* Correct FreeBob driver_initialize.
 
 2008-03-06 Stephane Letz  <letz@grame.fr>
 		
